[package]
name = "pumpwithfriens"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pumpwithfriens"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
bytemuck = "1.15.0"
hex = "0.4.3"
pump = { path = "../../../pump-contracts-solana/programs/pump", features = ["cpi", "no-entrypoint"] }
spl-token = "*"
switchboard-solana = "0.29.107"
